drill1/myapp-deploy-v3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v3
  labels:
    app: myapp
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      version: v3
  template:
    metadata:
      labels:
        app: myapp
        version: v3
    spec:
      containers:
      - name: myapp
        image: nginx:latest
        ports:
        - containerPort: 80
