drill1/main-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-main-service
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30001
  type: NodePort
