drill1/service-v1.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-v1-service
spec:
  selector:
    app: myapp
    version: v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
