drill1/service-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-v2-service
spec:
  selector:
    app: myapp
    version: v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
