drill1/service-v3.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-v3-service
spec:
  selector:
    app: myapp
    version: v3
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
